test/resources/typer/passing/HOFHighOrder.amy
object HOFHighOrder
  def getMultiplier(factor: Int(32)): (Int(32)) => Int(32) :=
    (x: Int(32)) => x * factor
  end getMultiplier

  val f: (Int(32)) => Int(32) = getMultiplier(2); 
  f(10) 
end HOFHighOrder