test/resources/typer/failing/LetError2.grading.amy
object LetError2
  def test(): Int(32) =
    val x: Int(32) = false;
    2
  end test
end LetError2
